--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
     <h2>Categories</h2>
     <div id="categories" class="product-list new-hot-list"></div>
+
+    <h2>New Added Products</h2>
+    <div id="new-products" class="product-list new-hot-list"></div>
   </main>
 
   <div id="image-viewer" class="image-viewer">
