--- a/status.html
+++ b/status.html
@@ -118,56 +118,69 @@
   </div>
 
   <!-- Middle full-length policy card -->
-  <div class="notice-card card" style="flex: 2; text-align: left;">
-    <h2>📦 Shipping & 🔄 Return Policy</h2>
-    
-    <h3>1. Order Processing & Dispatch</h3>
-    <ul>
-      <li>All confirmed orders placed before <b>12:00 PM</b> are processed and dispatched on the <b>same business day</b>, unless delayed due to courier service issues <b>(updated)</b>.</li>
-      <li>Orders placed after 6:00 PM will be dispatched on the <b>next business day</b>.</li>
-    </ul>
+ <div class="notice-card card" style="flex: 2; text-align: left;">
+  <h2>📦 Shipping & 🔄 Return Policy</h2>
+  
+  <h3>1. Order Processing & Dispatch</h3>
+  <ul>
+    <li>All confirmed orders placed before <b>12:00 PM</b> are processed and dispatched on the <b>same business day</b>, unless delayed due to courier service issues.</li>
+    <li>Orders placed after <b>6:00 PM</b> will be dispatched on the <b>next business day</b>.</li>
+  </ul>
 
-    <h3>2. Delivery Timeline</h3>
-    <ul>
-      <li>Estimated delivery time is <b>3–7 business days for normal order and 20-40 days for pre order </b>, depending on location and courier efficiency.</li>
-      <li>Customers will be notified with tracking details once the order has been dispatched.</li>
-    </ul>
+  <h3>2. Delivery Timeline</h3>
+  <ul>
+    <li><b>Regular Orders:</b> 3–7 business days</li>
+    <li><b>Pre-Orders:</b> 20–40 business days</li>
+    <li>Delivery time may vary depending on location and courier efficiency.</li>
+    <li>Tracking details will be shared once the order has been dispatched.</li>
+  </ul>
 
-    <h3>3. Pre-Order Policy</h3>
-    <ul>
-      <li>A <b>25% advance payment</b> is required to confirm any pre-order.</li>
-    </ul>
-    <h4>Important Note</h4>
-    <ul>
-      <li>Once a pre-order is confirmed, it <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
-      <li>Customers must <b>verify the product upon delivery</b> in the presence of the courier.</li>
-    </ul>
+  <h3>3. Pre-Order Policy</h3>
+  <ul>
+    <li>A <b>25% advance payment</b> is required to confirm any pre-order.</li>
+    <li>Once confirmed, a pre-order <b>cannot be cancelled, refunded, or placed on hold</b>.</li>
+    <li>Pre-orders are eligible for return <b>only if defective on arrival</b>.</li>
+    <li>Customers must inspect and verify the product <b>in the presence of the courier</b> upon delivery.</li>
+  </ul>
 
-    <h3>4. Return Policy</h3>
+  <h3>4. Return Policy</h3>
 
-    <h4>4.1 Eligibility Window</h4>
-    <ul>
-      <li>Items can be returned within <b>7 days of purchase</b>.</li>
-      <li>The 7-day period is counted from the <b>date of delivery</b>.</li>
-    </ul>
+  <h4>4.1 Eligibility</h4>
+  <ul>
+    <li>Returns are accepted within <b>7 days from the date of delivery</b>.</li>
+    <li>Returns are accepted <b>only for products that are defective or damaged upon delivery</b>.</li>
+  </ul>
 
-    <h4>4.2 Condition of Returned Items</h4>
-    <ul>
-      <li>Products must be in <b>original condition</b>, unused, with all packaging and accessories intact.</li>
-      <li>Items not meeting these conditions may be declined for return.</li>
-    </ul>
-  <h4>4.3 Proof of Condition Required</h4>
-    <ul>
-      <li>Customers must provide clear evidence such as an unboxing <b>video recorded</b> from the moment the package is opened, showing that the item arrived damaged or defective.
-Returns may be declined if sufficient proof is not provided or if the product appears to have been damaged after delivery.</li>
-    </ul>
-    <h4>4.4 Valid Reasons for Return</h4>
-    <ul>
-      <li><b>Change of preference is not accepted</b> – Returns <b>cannot</b> be made for reasons like “didn’t like the product” or “changed my mind”.</li>
-      <li><b>Defective on Arrival</b> – Products may only be returned if <b>defective or damaged upon delivery</b>.</li>
-      <li><b>Pre-Orders</b> – Confirmed pre-orders <b>cannot be returned</b>, unless defective on arrival.</li>
-    </ul>
-  </div>
+  <h4>4.2 Proof Requirement</h4>
+  <ul>
+    <li>A clear <b>unboxing video recorded from the moment the package is opened</b> is mandatory for all return claims.</li>
+    <li>Returns may be declined if proper proof is not provided or if damage appears to have occurred after delivery.</li>
+  </ul>
+
+  <h4>4.3 Condition of Returned Items</h4>
+  <ul>
+    <li>Products must be <b>unused</b>, in <b>original condition</b>, and include <b>all packaging and accessories</b>.</li>
+    <li>Items not meeting these conditions may be rejected.</li>
+  </ul>
+
+  <h4>4.4 No Return / No Exchange Conditions</h4>
+  <ul>
+    <li>Change of mind or personal preference.</li>
+    <li><b>Slight color, shade, or finish variations</b> due to lighting, photography, screen/display settings, or manufacturing/processing methods.</li>
+    <li>Minor cosmetic differences that do not affect product functionality.</li>
+    <li>Damage caused after delivery.</li>
+    <li>Missing or insufficient unboxing video proof.</li>
+  </ul>
+
+  <h4>Color Disclaimer</h4>
+  <ul>
+    <li>Product images are for reference only. Minor color variations may occur due to lighting, screen calibration, or production processes. Such variations are normal and <b>are not considered defects</b>.</li>
+  </ul>
+   <p style="margin-top: 16px; font-size: 0.9em; color: #777;">
+  <em>Last updated: 29 January 2026</em>
+</p>
+</div>
+
 
   <!-- Right card -->
   <div class="notice-card card" style="flex: 1; text-align: left;">
@@ -396,6 +409,7 @@ Returns may be declined if sufficient proof is not provided or if the product ap
 </script>
 </body>
 </html>
+
 
 
 
