--- a/index.html
+++ b/index.html
@@ -103,58 +103,73 @@
     </div>
   
   </div>
-<!-- Replace the existing <footer> in index.html with this -->
 <footer class="footer">
   <div class="footer-container">
-    <div class="footer-section about-us">
-      <h3>About Us</h3>
-      <p>The Geek Shop is a Bangladesh-based, community-driven store run by a small group of tech and mechanical keyboard enthusiasts. Our goal is simple: to make quality keyboards, keycaps, switches, and accessories more accessible to the local enthusiast community. We mainly operate through a pre-order system, which helps us bring in unique and premium products at fair prices. In some cases, we also offer limited ready-stock items based on demand. Everything we do is focused on authenticity, transparency, and building a strong geek community in Bangladesh.</p>
+    <!-- Top row: About Us + FAQs -->
+    <div class="footer-top">
+      <div class="footer-section about-us">
+        <h3>About Us</h3>
+        <p>The Geek Shop is a Bangladesh-based, community-driven store run by a small group of tech and mechanical keyboard enthusiasts. Our goal is simple: to make quality keyboards, keycaps, switches, and accessories more accessible to the local enthusiast community. We mainly operate through a pre-order system, which helps us bring in unique and premium products at fair prices. In some cases, we also offer limited ready-stock items based on demand. Everything we do is focused on authenticity, transparency, and building a strong geek community in Bangladesh.</p>
+      </div>
+
+      <div class="footer-section faqs">
+        <h3>FAQs</h3>
+        <div class="faq-item">
+          <button class="faq-question">What is the pre-order system?</button>
+          <div class="faq-answer">
+            <p>Our pre-order system allows you to reserve products before they arrive in stock. You pay a portion upfront (typically 25%), and the rest upon delivery. This helps us import premium items based on demand.</p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <button class="faq-question">How long does delivery take?</button>
+          <div class="faq-answer">
+            <p>Delivery within Dhaka typically takes 2-3 days, while outside Dhaka may take 4-7 days. Pre-order items may take longer depending on import timelines.</p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <button class="faq-question">What payment methods are accepted?</button>
+          <div class="faq-answer">
+            <p>We accept Bkash for full or partial payments and Cash on Delivery (COD) with an advance delivery fee.</p>
+          </div>
+        </div>
+        <!-- You can add more FAQ items here -->
+      </div>
     </div>
-    <div class="footer-section faqs">
-      <h3>FAQs</h3>
-      <div class="faq-item">
-        <button class="faq-question">What is the pre-order system?</button>
-        <div class="faq-answer">
-          <p>Our pre-order system allows you to reserve products before they arrive in stock. You pay a portion upfront (typically 25%), and the rest upon delivery. This helps us import premium items based on demand.</p>
+
+    <!-- Bottom row: Payment Options + Contact Us -->
+    <div class="footer-bottom">
+      <div class="footer-section payment-options">
+        <h3>Payment Options</h3>
+        <div class="payment-methods">
+          <div class="payment-method">
+            <img src="bkash-logo.png" alt="bKash" class="payment-logo">
+            <span>bKash (Full or Partial)</span>
+          </div>
+          <div class="payment-method">
+            <img src="cod-icon.png" alt="Cash on Delivery" class="payment-logo">
+            <span>Cash on Delivery</span>
+          </div>
         </div>
       </div>
-      <div class="faq-item">
-        <button class="faq-question">How long does delivery take?</button>
-        <div class="faq-answer">
-          <p>Delivery within Dhaka typically takes 2-3 days, while outside Dhaka may take 4-7 days. Pre-order items may take longer depending on import timelines.</p>
+
+      <div class="footer-section contact-us">
+        <h3>Contact Us</h3>
+        <div class="social-links">
+          <a href="https://www.facebook.com/thegeek.shop0" target="_blank">
+            <img src="facebook.png" alt="Facebook" class="social-icon">
+          </a>
+          <a href="https://www.instagram.com/thegeek.shop0" target="_blank">
+            <img src="instagram.png" alt="Instagram" class="social-icon">
+          </a>
+          <a href="https://wa.me/01960902526" target="_blank">
+            <img src="whatsapp.png" alt="WhatsApp" class="social-icon">
+          </a>
         </div>
-      </div>
-      <div class="faq-item">
-        <button class="faq-question">What payment methods are accepted?</button>
-        <div class="faq-answer">
-          <p>We accept Bkash for full or partial payments and Cash on Delivery (COD) with an advance delivery fee.</p>
-        </div>
-      </div>
-      <!-- Add more FAQ items here as needed -->
-    </div>
-    <div class="footer-section payment-options">
-      <h3>Payment Options</h3>
-      <ul>
-        <li>Bkash (Full or Partial Payment)</li>
-        <li>Cash on Delivery (With Advance Delivery Fee)</li>
-      </ul>
-    </div>
-    <div class="footer-section contact-us">
-      <h3>Contact Us</h3>
-      <div class="social-links">
-        <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-          <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-        </a>
-        <a href="https://www.instagram.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-          <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-        </a>
-        <a href="https://wa.me/01960902526" target="_blank" style="margin: 0 10px;">
-          <img src="whatsapp.png" alt="WhatsApp" style="width: 30px; height: 30px;">
-        </a>
       </div>
     </div>
   </div>
-  <p class="copyright">&copy; All rights reserved by The Geek Shop</p>
+
+  <p class="copyright">© All rights reserved by The Geek Shop</p>
 </footer>
 </body>
 
